@startuml WhatsChat数据库关系图

!define ENTITY class
!define PK <<PK>>
!define FK <<FK>>
!define UK <<UK>>

!theme plain
skinparam class {
    BackgroundColor #E8F4FD
    BorderColor #2E86AB
    ArrowColor #2E86AB
    FontSize 10
}
skinparam note {
    BackgroundColor #FFF2CC
    BorderColor #D6B656
    FontSize 9
}
skinparam package {
    BackgroundColor #F0F8FF
    BorderColor #4682B4
    FontSize 12
    FontStyle bold
}
skinparam arrow {
    Color #2E86AB
    Thickness 2
}

title WhatsChat 数据库关系图

' 布局设置
!define LAYOUT_TOP #E8F4FD
!define LAYOUT_CENTER #F0F8FF
!define LAYOUT_BOTTOM #E6F3FF

package "核心实体层" LAYOUT_TOP {
  ENTITY User {
    PK id : UUID
    UK username : VARCHAR(20)
    UK email : VARCHAR(255)
    password_hash : VARCHAR(255)
    phone : VARCHAR(20)
    avatar_url : TEXT
    status : VARCHAR(50)
    bio : TEXT
    is_verified : BOOLEAN
    is_active : BOOLEAN
    last_seen : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  ENTITY Chat {
    PK id : UUID
    name : VARCHAR(100)
    type : VARCHAR(20)
    description : TEXT
    avatar_url : TEXT
    is_archived : BOOLEAN
    is_muted : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  ENTITY Message {
    PK id : UUID
    FK chat_id : UUID
    FK sender_id : UUID
    content : TEXT
    type : VARCHAR(20)
    metadata : JSONB
    is_edited : BOOLEAN
    is_deleted : BOOLEAN
    FK reply_to_id : UUID
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }
}

package "关联实体层" LAYOUT_CENTER {
  ENTITY ChatParticipant {
    PK id : UUID
    FK chat_id : UUID
    FK user_id : UUID
    role : VARCHAR(20)
    joined_at : TIMESTAMP
    left_at : TIMESTAMP
  }

  ENTITY Group {
    PK id : UUID
    FK chat_id : UUID
    FK owner_id : UUID
    name : VARCHAR(100)
    description : TEXT
    avatar_url : TEXT
    max_participants : INTEGER
    is_public : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  ENTITY Contact {
    PK id : UUID
    FK user_id : UUID
    FK contact_user_id : UUID
    nickname : VARCHAR(50)
    is_blocked : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }
}

package "功能实体层" LAYOUT_BOTTOM {
  ENTITY Call {
    PK id : UUID
    FK chat_id : UUID
    FK initiator_id : UUID
    type : VARCHAR(10)
    status : VARCHAR(20)
    started_at : TIMESTAMP
    ended_at : TIMESTAMP
    duration : INTEGER
    participants : JSONB
  }

  ENTITY File {
    PK id : UUID
    FK message_id : UUID
    FK uploaded_by : UUID
    filename : VARCHAR(255)
    original_name : VARCHAR(255)
    mime_type : VARCHAR(100)
    size : BIGINT
    url : TEXT
    storage_path : TEXT
    created_at : TIMESTAMP
  }

  ENTITY Session {
    PK id : UUID
    FK user_id : UUID
    token_hash : VARCHAR(255)
    device_info : TEXT
    ip_address : INET
    expires_at : TIMESTAMP
    created_at : TIMESTAMP
    last_used : TIMESTAMP
  }

  ENTITY Notification {
    PK id : UUID
    FK user_id : UUID
    FK chat_id : UUID
    FK message_id : UUID
    type : VARCHAR(50)
    title : VARCHAR(255)
    content : TEXT
    is_read : BOOLEAN
    created_at : TIMESTAMP
  }

  ENTITY UserSettings {
    PK id : UUID
    FK user_id : UUID
    privacy_settings : JSONB
    notification_settings : JSONB
    appearance_settings : JSONB
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  ENTITY MessageReaction {
    PK id : UUID
    FK message_id : UUID
    FK user_id : UUID
    emoji : VARCHAR(10)
    created_at : TIMESTAMP
  }

  ENTITY MessageRead {
    PK id : UUID
    FK message_id : UUID
    FK user_id : UUID
    read_at : TIMESTAMP
  }
}

' 核心关系 - 用户相关
User ||--o{ ChatParticipant : "参与"
User ||--o{ Message : "发送"
User ||--o{ Group : "拥有"
User ||--|| UserSettings : "拥有设置"
User ||--o{ Contact : "拥有联系人"
User ||--o{ Session : "拥有会话"

' 核心关系 - 聊天相关
Chat ||--o{ Message : "包含"
Chat ||--o{ ChatParticipant : "有参与者"
Chat ||--|| Group : "是群组"
Chat ||--o{ Call : "承载通话"

' 核心关系 - 消息相关
Message ||--o{ File : "包含文件"
Message ||--o{ MessageReaction : "有反应"
Message ||--o{ MessageRead : "被阅读"
Message ||--o{ Message : "回复"

' 功能关系
User ||--o{ Call : "发起"
User ||--o{ File : "上传"
User ||--o{ Notification : "接收通知"
User ||--o{ MessageReaction : "对消息反应"
User ||--o{ MessageRead : "阅读消息"

Chat ||--o{ Notification : "相关通知"
Message ||--o{ Notification : "相关通知"

Group ||--o{ ChatParticipant : "有成员"

Contact }o--|| User : "联系人用户"

' 布局优化
User -[hidden]- Chat
Chat -[hidden]- Message
ChatParticipant -[hidden]- Group
Group -[hidden]- Contact
Call -[hidden]- File
File -[hidden]- Session
Session -[hidden]- Notification
Notification -[hidden]- UserSettings
UserSettings -[hidden]- MessageReaction
MessageReaction -[hidden]- MessageRead

' 约束说明
note top of User
  <b>用户约束</b>
  • email 和 username 唯一
  • status 默认 'offline'
  • is_verified 默认 FALSE
  • is_active 默认 TRUE
end note

note top of Chat
  <b>聊天约束</b>
  • type: 'private' | 'group'
  • is_archived 默认 FALSE
  • is_muted 默认 FALSE
end note

note top of Message
  <b>消息约束</b>
  • type 限制在预定义类型
  • is_edited 默认 FALSE
  • is_deleted 默认 FALSE
end note

note top of ChatParticipant
  <b>参与者约束</b>
  • role: 'owner' | 'admin' | 'member'
  • (chat_id, user_id) 唯一
end note

note top of Group
  <b>群组约束</b>
  • max_participants 默认 500
  • is_public 默认 FALSE
end note

note top of Call
  <b>通话约束</b>
  • type: 'audio' | 'video'
  • status 限制在预定义状态
  • participants 默认 '[]'::jsonb
end note

note top of Contact
  <b>联系人约束</b>
  • is_blocked 默认 FALSE
  • (user_id, contact_user_id) 唯一
end note

note top of UserSettings
  <b>设置约束</b>
  • user_id 唯一
  • 各设置字段默认 '{}'::jsonb
end note

note top of MessageReaction
  <b>反应约束</b>
  • (message_id, user_id, emoji) 唯一
end note

note top of MessageRead
  <b>已读约束</b>
  • (message_id, user_id) 唯一
end note

@enduml
